--- a/src/Ecommerce/EcommerceBundle/Resources/views/Default/produits/layout/affichage.html.twig
+++ b/src/Ecommerce/EcommerceBundle/Resources/views/Default/produits/layout/affichage.html.twig
@@ -166,12 +166,15 @@
                                                     <div class="tex" >
                                   <span id="prestaAjax" style="display: none">
                               <div class="thumbnail" id="divchk">
-                                  <input type="radio" id="chk4" name="chk"   class="vignette_thematique "  value="L" >Ma ville</h5>
-                                  <input type="radio" id="chk1" name="chk"   class="vignette_thematique "  value="0" >Sa région
-                                  <input type="radio" id="chk2" name="chk"   class="vignette_thematique "  value="1" >+1 région<br>
-                                  <input type="radio" id="chk3" name="chk"   class="vignette_thematique "  value="3" >+3 région
-                                  <input type="radio" id="chk4" name="chk"   class="vignette_thematique "  value="6" >+6 région<br>
-                                  <input type="radio" id="chk4" name="chk"   class="vignette_thematique"  value="9" >+9 région
+
+                                  <input type="checkbox" id="chk4" name="chk"   class="vignette_thematique single-checkbox "  value="L" >Ma ville</h5>
+                                  <input type="checkbox" id="chk1" name="chk"   class="vignette_thematique single-checkbox "  value="0" >Sa région
+                                  <input type="checkbox" id="chk2" name="chk"   class="vignette_thematique single-checkbox "  value="1" >+1 région<br>
+                                  <input type="checkbox" id="chk3" name="chk"   class="vignette_thematique single-checkbox "  value="3" >+3 région
+                                  <input type="checkbox" id="chk4" name="chk"   class="vignette_thematique single-checkbox "  value="6" >+6 région<br>
+                                  <input type="checkbox" id="chk4" name="chk"   class="vignette_thematique single-checkbox"  value="9" >+9 région
+
+
 
                                     </div>
                                 </span>
@@ -200,7 +203,7 @@
                                             <li id="">
                                                 <div align=center class="col-md-3" style="background-color: white; height:210px;margin-top: 73px; margin-left: 51px; ">
 
-                                                    <div class="titre"><input  class="vignette_localite  " type="checkbox" name="villes"  value="1"/> Categorie 1</div>
+                                                    <div class="titre"><input id="1" class="vignette_localite ck " type="checkbox" name="villes"  value="24000"/> Categorie 1</div>
 
                                                     <br>
                                                     <br>
@@ -208,7 +211,7 @@
                                                     <div class="tex" >
                                                         <br>
 
-                                                        <label  class="vignette_localite my-activity " type="" name="villes"  value="1"/> Casablanca
+                                                        <label  /> Casablanca
 
                                                     </div>
 
@@ -218,18 +221,18 @@
                                             <li id="">
                                                 <div align=center class="col-md-3" style="background-color: white; height:210px; margin-top: 73px; ">
 
-                                                    <div class="titre"><input id="select" class="vignette_localite  " type="checkbox" name="villes"  value="2"/> Categorie 2<br></div>
+                                                    <div class="titre"><input id="2" class="vignette_localite  " type="checkbox" name="villes"  value="12000"/> Categorie 2<br></div>
 
                                                     <br>
                                                     <br>
 
                                                     <div class="tex" >
 
-                                                        <label id="select" class="vignette_localite  " type="checkbox" name="villes"  value="2"/> Rabat<br>
-                                                        <label id="select" class="vignette_localite " type="checkbox" name="villes"  value="2"/> Fés<br>
-                                                        <label id="select" class="vignette_localite" type="checkbox" name="villes"  value="2"/> Marrakech<br>
-                                                        <label id="select" class="vignette_localite" type="checkbox" name="villes"  value="2"/> Meknés<br>
-                                                        <label id="select" class="vignette_localite " type="checkbox" name="villes"  value="2"/> Agadir
+                                                        <label/> Rabat<br>
+                                                        <label/> Fés<br>
+                                                        <label /> Marrakech<br>
+                                                        <label/> Meknés<br>
+                                                        <label /> Agadir
 
                                                     </div>
 
@@ -239,19 +242,19 @@
                                             <li id="">
                                                 <div align=center class="col-md-3" style="background-color: white; height:210px;margin-top: 73px;  ">
 
-                                                    <div class="titre"><input id="select" class="vignette_localite" type="checkbox" name="villes"  value="3"/>Categorie 3<br></div>
+                                                    <div class="titre"><input id="3" class="vignette_localite" type="checkbox" name="villes"  value="8000"/>Categorie 3<br></div>
 
                                                     <br>
                                                     <br>
 
                                                     <div class="tex" >
 
-                                                        <label id="select" class="vignette_localite" type="checkbox" name="villes"  value="3"/>Kénitra<br>
-                                                        <label id="select" class="vignette_localite" type="checkbox" name="villes"  value="3"/> Oujda<br>
-                                                        <label id="select" class="vignette_localite" type="checkbox" name="villes"  value="3"/> Essaouira<br>
-                                                        <label id="select" class="vignette_localite" type="checkbox" name="villes"  value="3"/> Safi<br>
-                                                        <label id="select" class="vignette_localite" type="checkbox" name="villes"  value="3"/> Settat<br>
-                                                        <label id="select" class="vignette_localite" type="checkbox" name="villes"  value="3"/> Tétouan<br>
+                                                        <label/>Kénitra<br>
+                                                        <label /> Oujda<br>
+                                                        <label /> Essaouira<br>
+                                                        <label/> Safi<br>
+                                                        <label /> Settat<br>
+                                                        <label /> Tétouan<br>
 
                                                     </div>
 
@@ -260,13 +263,13 @@
                                             <li>
                                                 <div align=center class="col-md-3" style="background-color: white; height:210px;margin-top: 73px;   ">
 
-                                                    <div class="titre"> <input id="select" class="vignette_localite" type="checkbox" name="villes"  value="4"/>Categorie 4</div>
+                                                    <div class="titre"> <input id="4" class="vignette_localite" type="checkbox" name="villes"  value="5000"/>Categorie 4</div>
 
                                                     <br>
                                                     <br>
 
                                                     <div class="tex" >
-                                                        <label id="select" class="vignette_localite" type="checkbox" name="villes"  value="4"/> Toutes les autres
+                                                        <label /> Toutes les autres
                                                         villes y comprix les alentours des grandes villes Ex: Bouskoura
 
                                                     </div>
@@ -275,7 +278,7 @@
                                             </li>
                                         </ul>
                                         <input type="text" id="localite" >
-                                        <input  type="text" id="localite1"  >
+                                        <input  type="text" id="localite1" style="display: none" >
                                     </div>
                                 </div>
 
@@ -380,15 +383,15 @@
                                         <form class="form-inline ">
 
                                             <div class="form-group mb-2">
-                                                <label class="titre">
+                                                <div class="titre">
                                                     <input id="select" class="habillage " type="radio" name="villes"  value="1"/> Jour
 
                                             </div>
-                                            <div class="form-group mb-2">
-                                                <label class="titre">
+                                                <div class="titre">
 
-                                                     <input id="select" class="habillage" type="radio" name="villes"  value="2"/> Semaine
-                                                </label>
+                                                    <input id="select" class="habillage" type="radio" name="villes"  value="2"/> Semaine
+                                                </div>
+
                                             </div>
 
                                         </form>
@@ -472,11 +475,10 @@
 
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="http://code.jquery.com/jquery.js"></script>
+    {#<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="http://code.jquery.com/jquery.js"></script>#}
 
-
-<script>
+    <script>
     var limit = 1;
     $('input.single-checkbox').on('change', function(evt) {
         if($(this).siblings(':checked').length >= limit) {
@@ -497,16 +499,17 @@
                 var vignette = +$("#vignette").val() || 0;
                 var habillage = +$("#habillage").val() || 0;
                 var banniere = +$("#banniere").val() || 0;
+
                 total=thematique + localite+pfjour+promo+vignette+habillage+banniere;
+
+                
                     $("#total").val(total);
             }
-            cal2();
+
             function cal2() {
                 var localite = +$("#localite").val() || 0;
                 var localite1 = +$("#localite1").val() || 0;
-
-                $("#localite1").val(localite +localite1);
-
+                $("#localite1").val(localite1 + localite);
             }
 
             /*  var rubrique = $(this);
@@ -540,6 +543,7 @@
                             $('input[id=thematique]').val(successMessage);
                             cal();
 
+
                             /*  $('#prestation').children("option").remove();*/
                         },
                         //traitement en cas d'erreur (on peut aussi traiter le cas erreur 500...)
@@ -556,7 +560,7 @@
 
 
             /////////////////////////
-            $(document).on('click', '.vignette_thematique', function () {
+           $ (".vignette_thematique").change( function () {
                 var ctar  = 'VA';
                 console.log("CHANGE rubrique AND prestation....................");
                 var select = jQuery(this);
@@ -566,6 +570,10 @@
                 console.log('ville : ', v, 'opt1 :',o);
                 //     console.log('rubrique : ', r);
                 var data_send = { 'ville': v,'opt1':o,'region':v,'ctar':ctar};
+                var $input = $( this );
+                if ( $input.is( ":checked" ) )
+
+                {
                 $.ajax({
                     url: '{{ path('ajax_va') }}',
                     type: 'POST',
@@ -590,18 +598,31 @@
                         }
                     }
                 });
+                }
+                else
+                {
+
+                    $('input[id=thematique]').val(0);
+
+
+                }
                 //   $( "#select-rubrique" ).clone().appendTo("#test");
             });
 
             //vignette Localité
-
-            $(document).on('click', '.vignette_localite', function () {
+        /*$(document).on('click', '.vignette_localite', function ()
+            {
                 var ctar = 'VL';
                 console.log("CHANGE rubrique AND prestation....................");
                 var opt1 = $(this).attr("value");
                 console.log('ctar : ', ctar, 'opt1 :', opt1);
                 var data_send = {'ctar': ctar,'opt1':opt1};
-                $.ajax({
+
+                var $input = $( this );
+                if ( $input.is( ":checked" ) )
+
+                {
+                    $.ajax({
                     url:'{{ path('ajax_vl') }}',
                     type: 'POST',
                     data: data_send,
@@ -609,9 +630,13 @@
                         //traitement en cas de succès
                         200: function (response) {
                             var successMessage = response.nom.VL;
-                            $('input[id=localite]').val(successMessage);
 
-                            cal()
+                          var t1= $('input[id=localite]').val(successMessage);
+                            console.log('localite ::' ,($('input[id=localite]').val(successMessage)).val());
+                            cal2();
+                           var t= $('input[id=localite1]').val();
+                            console.log('localite1 ::',t);
+                            cal();
                         },
                         412: function (response) {
                             var errorsForm = response.responseJSON.formErrors;
@@ -619,13 +644,29 @@
                             alert('error');
                         }
                     }
-                });
+                });}
+                else
+                    {
+                        var bn = $("#localite").val();
+                        var bf = $("#localite1").val();
+                        var n= (bf-bn);
+
+                        $('input[id=localite]').val(0);
+                        $('input[id=localite1]').val(n);
+                        cal2();
+                        cal();
+
+
+                }
 
             });
+*/
+            //solution 2
 
 
 
-     /* $(".vignette_localite").click(function(event) {
+
+   $(".vignette_localite").click(function(event) {
                 var total = 0;
                 $(".vignette_localite:checked").each(function() {
                     total += (parseInt($(this).val()));
@@ -637,7 +678,7 @@
                     $('#localite').val(total);
                     cal();
                 }
-            });*/
+            });
 
 
             //professionnels du jour
@@ -718,8 +759,9 @@
 
 
                                 var successMessage =  successMessage = response.nom.HB;
+                                cal();
                                     $('input[id=habillage]').val(successMessage);
-                                    cal();
+
 
 
 
@@ -821,10 +863,6 @@
     </script>
 
 
-        <label for="name">Name:</label>
-        <input type="text" name="name" /><br>
-        <label for="language">Do you speak English fluently?</label>
-        <input type="checkbox" onclick="checkFluency()" id="fluency"checked/>
 
 
     </head>
