--- a/src/Ecommerce/EcommerceBundle/Resources/views/Default/produits/layout/produitsdevis.html.twig
+++ b/src/Ecommerce/EcommerceBundle/Resources/views/Default/produits/layout/produitsdevis.html.twig
@@ -23,71 +23,96 @@
 
 
             </div>
-            <h1>Simulation Devis</h1>
             <h4> Gestion contenu</h4>
             <h5>Catalogue</h5>
             <div id="wrap">
                 <div class="span9">
                     <ul class="thumbnails">
-                        {% for produit in produitsCatalogue %}
-                            <li id="{{ produit.id }}">
-                                <div class="thumbnail">
 
-                                    <h5><input class="my-activity" type="checkbox"  value="{{ produit.prix }}"> {{ produit.nom }}</h5>
+                        <li >
+                            <div class="thumbnail">
+
+                                <h5><input class="my-activity" type="checkbox"  value="3500"> Catalogue 1 5 pages
+                                    <input class="my-activity" type="checkbox"  value="5000"> Catalogue 2 10 pages
+                                    <input class="my-activity" type="checkbox"  value="7500"> Catalogue 3 20 pages
+                                    <input class="my-activity" type="checkbox"  value="9000"> Catalogue 4 50 pages
+                                </h5>
 
 
-                                </div>
-                            </li>
-                        {% endfor %}
+
+
+
+
+                            </div>
+                        </li>
+
                     </ul>
                 </div>
-            <h5>Catalogue Référencé</h5>
-            <div class="span9">
-                <ul class="thumbnails">
-                    {% for produit in produitsCatalogueReference %}
-                        <li id="{{ produit.id }}">
+                <h5>Catalogue Référencé</h5>
+                <div class="span9">
+                    <ul class="thumbnails">
+
+                        <li >
                             <div class="thumbnail">
 
-                                <h5><input type="checkbox"  class="my-activity"  value="{{ produit.prix }}"> {{ produit.nom }}</h5>
+                                <h5><input type="checkbox"  class="my-activity"  value="5000"> Catalogue Référencé 1 5pages
+                                    <input type="checkbox"  class="my-activity"  value="6500"> Catalogue Référencé 1 5pages
+                                </h5>
+                                <h5><input type="checkbox"  class="my-activity"  value="9000"> Catalogue Référencé 1 5pages
+                                    <input type="checkbox"  class="my-activity"  value="10500"> Catalogue Référencé 1 5pages</h5>
 
 
                             </div>
                         </li>
-                    {% endfor %}
-                </ul>
-            </div>
 
-            <h5>Vidéo</h5>
-            <div class="span9">
-                <ul class="thumbnails">
-                    {% for produit in produitsVideo %}
-                        <li id="{{ produit.id }}">
+                    </ul>
+                </div>
+
+                <h5>Vidéo</h5>
+                <div class="span9">
+                    <ul class="thumbnails">
+
+                        <li >
                             <div class="thumbnail">
 
-                                <h5><input type="checkbox" class="my-activity"  value="{{ produit.prix }}"> {{ produit.nom }}</h5>
+                                <h5><input type="checkbox" class="my-activity"  value="3500">Vidéo Diffusion
+                                    <input type="checkbox" class="my-activity"  value="6500">Vidéo Graphique
+                                    <input type="checkbox" class="my-activity"  value="9500">Vidéo
+                                </h5>
+                                <h5><input type="checkbox" class="my-activity"  value="12500">Film
+                                    <input type="checkbox" class="my-activity"  value="20000">Motion Design
+                                    <input type="checkbox" class="my-activity"  value="30000">Vidéo Premium
+                                </h5>
 
 
                             </div>
                         </li>
-                    {% endfor %}
-                </ul>
-            </div>
 
-            <h5>Pack Visibilité</h5>
-            <div class="span9">
-                <ul class="thumbnails">
-                    {% for produit in produitsPack %}
-                        <li id="{{ produit.id }}">
+                    </ul>
+                </div>
+
+                <h5>Pack Visibilité</h5>
+                <div class="span9">
+                    <ul class="thumbnails">
+
+                        <li >
                             <div class="thumbnail">
 
-                                <h5><input type="checkbox" class="my-activity"  value="{{ produit.prix }}"> {{ produit.nom }}</h5>
+                                <h5><input type="checkbox" class="my-activity"  value="2000"> Page Web
+                                    <input type="checkbox" class="my-activity"  value="3000"> Pack Présesnce
+                                    <input type="checkbox" class="my-activity"  value="4500"> Web
+                                </h5>
+                                <h5><input type="checkbox" class="my-activity"  value="7000"> Web +
+                                    <input type="checkbox" class="my-activity"  value="9500">Web Interactif
+                                    <input type="checkbox" class="my-activity"  value="12000"> E-commerce
+                                </h5>
 
 
                             </div>
                         </li>
-                    {% endfor %}
-                </ul>
-            </div>
+
+                    </ul>
+                </div>
             </div>
             <p>
                 <strong> Budget estimé<br> Gestion de contenu</strong>: <input type="text" name="amount" id="amount" />
