--- a/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
@@ -420,16 +420,16 @@
                             <img class="icone" src="https://image.noelshack.com/fichiers/2018/08/5/1519379743-icone-3.png" alt="icone-3">
                             Référencement   <span class="glyphicon glyphicon-triangle-right fleche-petit"></span>
                         </a>
-                        <a href="{{ path('produitsdevis') }}" role="button" class="btn btn-info">
+                        <a href="{{ path('produits') }}" role="button" class="btn btn-info">
                             <img class="icone" src="https://image.noelshack.com/fichiers/2018/08/5/1519379743-icona-2.png" alt="icone-3">
                             Gestion de Contenu   <span class="glyphicon glyphicon-triangle-right"></span>
                         </a>
-                        <a href="http://www.telecontact.ma/" role="button" class="btn btn-info">
+                        <a href="{{ path('affichage') }}" role="button" class="btn btn-info">
                             <img class="icone" src="https://image.noelshack.com/fichiers/2018/08/5/1519379743-icone-1.png" alt="icone-3">
                             Affichage   <span class="glyphicon glyphicon-triangle-right"></span>
                         </a>
                         <br>
-                        <a href="http://www.telecontact.ma/" role="button" class="btn btn-info" id="bouton-3">
+                        <a href="" role="button" class="btn btn-info" id="bouton-3">
                             Devis Global
                         </a>
                     </div>
