--- a/src/Ecommerce/EcommerceBundle/Resources/views/Default/referencement/modulesUsed/referencement.html.twig
+++ b/src/Ecommerce/EcommerceBundle/Resources/views/Default/referencement/modulesUsed/referencement.html.twig
@@ -97,10 +97,10 @@
                             </div>
                         </div>
                         <td><input type="number" name="num1" id="sum3" class="pres_marq" style="display:none;" /></td>
-                        <td> <input type="number" id="mari" name="marie" value="" style="display:none;"></td>
-                        <td> <input type="number" id="resulta" name="marie" style="display:none;" value=""></td>
-                        <td> <input type="number" id="rubd" style="display:none;"  value=""></td>
-                        <td><input type="number" id="rania" style="display:none;" value=""></td>
+                        <td> <input type="number" id="mari" name="marie" value="" ></td>
+                        <td> <input type="number" id="resulta" name="marie" value=""></td>
+                        <td> <input type="number" id="rubd" value=""></td>
+                        <td><input type="number" id="rania"  value=""></td>
 
                     </div>
 
@@ -138,11 +138,11 @@
                                 <ul class="dropdown-menu" aria-labelledby="dropdownMenu2" style="overflow-y:scroll;">
 
 
-                                    <li><input  type="radio" name="radio" class="my-activity"  value="0"/>&nbsp; &nbsp;Sur sa localité</li>
-                                    <li><input  type="radio" name="radio" class="my-activity"  value="1"/>&nbsp; &nbsp;+1 Localité</li>
-                                    <li><input  type="radio" name="radio" class="my-activity"  value="3"/>&nbsp; &nbsp;+3 Localités</li>
-                                    <li><input  type="radio" name="radio" class="my-activity"  value="6"/>&nbsp; &nbsp;+6 Localités</li>
-                                    <li><input  type="radio" name="radio" class="my-activity"  value="9"/>&nbsp; &nbsp;+9 Localités</li>
+                                    <li><input  type="radio" name="radio1" class="my-activity"  value="0"/>&nbsp; &nbsp;Sur sa localité</li>
+                                    <li><input  type="radio" name="radio1" class="my-activity"  value="1"/>&nbsp; &nbsp;+1 Localité</li>
+                                    <li><input  type="radio" name="radio1" class="my-activity"  value="3"/>&nbsp; &nbsp;+3 Localités</li>
+                                    <li><input  type="radio" name="radio1" class="my-activity"  value="6"/>&nbsp; &nbsp;+6 Localités</li>
+                                    <li><input  type="radio" name="radio1" class="my-activity"  value="9"/>&nbsp; &nbsp;+9 Localités</li>
 
                                 </ul>
                             </div>
@@ -245,18 +245,18 @@
                     <input style="  "  id="fayssal" type="number"  value="">
                     <div class="form-group pull-right">
 
-                            <div class="form-group">
-                                <a href="#" role="button" class="btn">
-                                    <img class="icone" src="https://image.noelshack.com/fichiers/2018/08/5/1519379743-icona-2.png" alt="icone-3">
-                                    Gestion de Contenu   <span class="glyphicon glyphicon-triangle-right"></span>
-                                </a>
-                            </div>
-                            <div class="form-group">
-                                <a href="#" role="button" class="btn" style="width: 165px;">
-                                    <img class="icone" src="https://image.noelshack.com/fichiers/2018/08/5/1519379743-icone-1.png" alt="icone-3">
-                                    Affichage   <span class="glyphicon glyphicon-triangle-right"></span>
-                                </a>
-                            </div>
+                        <div class="form-group">
+                            <a href="#" role="button" class="btn">
+                                <img class="icone" src="https://image.noelshack.com/fichiers/2018/08/5/1519379743-icona-2.png" alt="icone-3">
+                                Gestion de Contenu   <span class="glyphicon glyphicon-triangle-right"></span>
+                            </a>
+                        </div>
+                        <div class="form-group">
+                            <a href="#" role="button" class="btn" style="width: 165px;">
+                                <img class="icone" src="https://image.noelshack.com/fichiers/2018/08/5/1519379743-icone-1.png" alt="icone-3">
+                                Affichage   <span class="glyphicon glyphicon-triangle-right"></span>
+                            </a>
+                        </div>
 
                     </div>
                 </form>
@@ -273,25 +273,21 @@
 <script src="http://code.jquery.com/jquery.js"></script>
 <script type="text/javascript">
     $(document).ready(function() {
-
         function cal(){
             var total = +$("#rania").val() || 0;
             var vat = +$("#mari").val() || 0;
             var vard = +$("#rubd").val() || 0;
             var final = +$("#resulta").val() || 0;
-
-         /*   alert(vat);
-            alert(total);
-            alert(vard);*/
-
+            /*   alert(vat);
+               alert(total);
+               alert(vard);*/
             $("#fayssal").val(vat + total+vard+final);
         }
 
+
         $(document).on('click', '#khalila', function () {
-cal();
-
+            cal();
             document.getElementById('fayssal')/*.style.display = 'block'*/;
-
         });
 
         $(document).on('click', '.my-activitys', function () {
@@ -299,14 +295,13 @@ cal();
             $('.xxx input[value='+o+']').prop("checked", true);
         });
 
-        $(document).on('click', '.my-activity', function () {
 
+        $(document).on('click', '.my-activity', function () {
             var ctar  = 'MV';
             console.log("CHANGE rubrique AND prestation....................");
             var select = jQuery(this);
             var v = $('input[name=villes]:checked').val();
             var o = $(this).attr("value");
-
             console.log('ville : ', v, 'opt1 :',o);
             var data_send = { 'ville': v,'opt1':o,'region':v,'ctar':ctar};
             $.ajax({
@@ -316,38 +311,27 @@ cal();
                 statusCode: {
                     //traitement en cas de succès
                     200: function (response) {
-
                         var successMessage = response.nom.VAR;
-
-
-                            $('input[id=rania]').val(successMessage);
+                        $('input[id=rania]').val(successMessage);
                         console.log(successMessage);
-                        rub();
-
-
-
+                       rub();
+                        Reg();
                     },
-
                     412: function (response) {
                         var errorsForm = response.responseJSON.formErrors;
                         //on affiche les erreurs...
                         alert('error');
-
                     }
                 }
             });
-
         });
-
-                                        ////////////////////////////////////////// selection Region//////////////////////////////////////////////
+        ////////////////////////////////////////// selection Region//////////////////////////////////////////////
         $(document).on('click', '.region', function () {
-
             var ctar  = 'ML';
             console.log("CHANGE rubrique AND prestation....................");
             var select = jQuery(this);
             var v = $('input[name=villes]:checked').val();
             var o = $(this).attr("value");
-
             console.log('villesss : ', v, 'opt1sss :',o);
             var data_send = { 'ville': v,'opt1':o,'region':v,'ctar':ctar};
             $.ajax({
@@ -357,51 +341,33 @@ cal();
                 statusCode: {
                     //traitement en cas de succès
                     200: function (response) {
-
                         var successMessage = response.nom.VAR;
-
-
                         $('input[id=rania]').val(successMessage);
-                        rub();
+
                         Reg();
 
-
                         console.log(successMessage);
-
-
                         /* console.log();
                             $('input[id=rania]').val(sum_result+successMessage);*/
-
                     },
-
                     412: function (response) {
                         var errorsForm = response.responseJSON.formErrors;
                         //on affiche les erreurs...
                         alert('error');
-
                     }
                 }
             });
-
         });
-
-                                        ////////////////////////////////////////// selection Rub supplementaire Ville//////////////////////////////////////////////
-
-
+        ////////////////////////////////////////// selection Rub supplementaire Ville//////////////////////////////////////////////
         function rub() {
-
             var num1 = document.getElementById('num1').value;
-
             if (num1 >=2) {
-
                 var ctar = 'RV';
                 console.log("CHANGE rubrique AND prestation sssss ....................");
                 var select = jQuery(this);
                 var rub = $('input[name=num1]').val();
-
                 var v = $('input[name=villes]:checked').val();
                 var o = $('input[class=my-activity]:checked').val();
-
                 console.log('ville : ', v, 'opt1 :', o, 'rubrique: ', rub);
                 var data_send = {'ville': v, 'opt1': o, 'region': v, 'ctar': ctar};
                 $.ajax({
@@ -411,50 +377,32 @@ cal();
                     statusCode: {
                         //traitement en cas de succès
                         200: function (response) {
-
                             var successMessage = response.nom.VAR;
-
-
                             var rubrique = (rub - 1) * successMessage;
                             console.log(rubrique);
                             $('input[id=rubd]').val(rubrique);
-
-
-
-
                         },
-
                         412: function (response) {
                             var errorsForm = response.responseJSON.formErrors;
                             //on affiche les erreurs...
                             alert('error');
-
                         }
                     }
                 });
             }
-
             else{
                 $('input[id=rubd]').val(0);
-
             }
-
         }
-
         function Reg() {
-
             var num1 = document.getElementById('num1').value;
-
             if (num1 >=2) {
-
                 var ctar = 'RL';
                 console.log("CHANGE rubrique AND prestation sssss ....................");
                 var select = jQuery(this);
                 var rub = $('input[name=num1]').val();
-
                 var v = $('input[name=villes]:checked').val();
                 var o = $('input[class=region]:checked').val();
-
                 console.log('ville : ', v, 'opt1 :', o, 'rubrique: ', rub);
                 var data_send = {'ville': v, 'opt1': o, 'region': v, 'ctar': ctar};
                 $.ajax({
@@ -464,101 +412,82 @@ cal();
                     statusCode: {
                         //traitement en cas de succès
                         200: function (response) {
-
                             var successMessage = response.nom.VAR;
-
-
                             var rubrique = (rub - 1) * successMessage;
                             console.log(rubrique);
                             $('input[id=rubd]').val(rubrique);
-
-
-
-
                         },
-
                         412: function (response) {
                             var errorsForm = response.responseJSON.formErrors;
                             //on affiche les erreurs...
                             alert('error');
-
                         }
                     }
                 });
             }
-
             else{
                 $('input[id=rubd]').val(0);
-
             }
-
         }
-
-
-
-
         $("#num2").on("keydown keyup change", function() {
             var num2 = document.getElementById('num2').value;
             var result2 = parseInt(num2) * 1500;
             document.getElementById("resulta").value = result2 ;
-
         });
         $("#num3").on("keydown keyup change", function() {
             var num3 = document.getElementById('num3').value;
             var result3 = parseInt(num3) * 400;
             document.getElementById("mari").value = result3;
-
-
         });
         $("#num1").on("keydown keyup change", function() {
+
+             if($('.my-activity').is(':checked')){
+
+                
+
+                 rub();
+             }
+             else if('') {
+                 Reg();
+             }
+
 
             var num1 = document.getElementById('num1').value;
             var result = parseInt(num1) * 3;
             document.getElementById('sum').value = result;
         });
 
+        /*     $(document).on("keydown keyup change", function() {
+     //                var result ;
+                 var num1 = document.getElementById('num1').value;
+                 var num2 = document.getElementById('num2').value;
+                 var num3 = document.getElementById('num3').value;
+                 var result = parseInt(num1) * 3;
+                 var result2 = parseInt(num2) * 1500;
+                 var result3 = parseInt(num3) * 400;
+                 if (!isNaN(result)) {
+                     document.getElementById('sum').value = result;
+                     document.getElementById('sum2').value = result2;
+                     document.getElementById('sum3').value = result3;
+                 }
+                 document.getElementById("result23").value =  result2+ result3 ;
+                 /!* sum_result =  result2 + result3;*!/
+                 rub();
+             });
+     */
 
 
-
-
-   /*     $(document).on("keydown keyup change", function() {
-
-
-//                var result ;
-            var num1 = document.getElementById('num1').value;
-            var num2 = document.getElementById('num2').value;
-            var num3 = document.getElementById('num3').value;
-
-
-
-
-            var result = parseInt(num1) * 3;
-            var result2 = parseInt(num2) * 1500;
-            var result3 = parseInt(num3) * 400;
-
-
-            if (!isNaN(result)) {
-                document.getElementById('sum').value = result;
-                document.getElementById('sum2').value = result2;
-                document.getElementById('sum3').value = result3;
-
+     var selectfct = function () {
+            if($(".my-activitys").is(":checked")){
+                $('#dropdownMenu2').prop('disabled', false);
+            }else{
+                $('#dropdownMenu2').prop('disabled', 'disabled');
             }
 
+        };
 
-            document.getElementById("result23").value =  result2+ result3 ;
-
-
-            /!* sum_result =  result2 + result3;*!/
-            rub();
-
-
-
-
-
-
-
-        });
-*/
+        $(selectfct);
+        $(".my-activitys").click(selectfct);
 
 
     });
