--- a/app/Resources/views/layout/layout.html.twig
+++ b/app/Resources/views/layout/layout.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block titre %}E-contact{% endblock %}</title>
+        <title>{% block titre %}E-contact | Telecontact{% endblock %}</title>
         <meta name="keywords" content="{% block motsCles %}{% endblock %}" />
         <meta name="description" content="{% block description %}{% endblock %}" />
         <link rel="stylesheet" href="{{ asset('css/bootstrap.css') }}" />
