--- a/src/Ecommerce/EcommerceBundle/Resources/views/Default/referencement/modulesUsed/referencement.html.twig
+++ b/src/Ecommerce/EcommerceBundle/Resources/views/Default/referencement/modulesUsed/referencement.html.twig
@@ -59,7 +59,7 @@
     <div class="container">
 
         <div class="row">
-            <div class="form-group" name="form1" method="POST" action="{{ path('referencementdevis') }}" >
+            <div class="form-group"  >
                 <div class="col-md-12 col-sm-12 col-xs-12">
 
                     <div class="btn-1">
@@ -77,7 +77,7 @@
                         <div class="form-group">
                             <label for="exampleInputAmount">Rubriques</label>
                             <div class="input-group ">
-                                <input type="number" class="form-control exampleInputAmount rubrique "  placeholder="Nbre" name="num1" id="num1" >
+                                <input type="number" class="form-control exampleInputAmount rubrique "  placeholder="Nbre" name="num1" id="num1" min="0" >
                             </div>
                         </div>
                         <br>
@@ -91,18 +91,18 @@
 
                         <br>
                         <div class="form-group">
-                            <label for="exampleInputAmount">Prestations supll.</label>
+                            <label for="exampleInputAmount">Pack Prestations supll.</label>
                             <div class="input-group">
 
-                                <input type="number" class="form-control exampleInputAmount pres_marq"  placeholder="Nbre" name="num2" id="num2" >
+                                <input type="number" class="form-control exampleInputAmount pres_marq"  placeholder="Nbre" name="num2" id="num2" min="0">
                             </div>
                         </div>
                         <tr><td><input type="number" name="sum2" id="sum2" class="pres_marq" style="display:none;" /></td></tr>
                         <br>
                         <div class="form-group">
-                            <label for="exampleInputAmount">Marque</label>
+                            <label for="exampleInputAmount">Pack Marque</label>
                             <div class="input-group">
-                                <input type="number" class="form-control exampleInputAmount pres_marq"  placeholder="Nbre" name="num1" id="num3">
+                                <input type="number" class="form-control exampleInputAmount pres_marq"  placeholder="Nbre" name="num1" id="num3" min="0">
                             </div>
                         </div>
                         <td><input type="number" name="num1" id="sum3" class="pres_marq" style="display:none;" /></td>
@@ -120,6 +120,7 @@
 
                         <div class="btn-2" align="center">
                             <p>Ma visibilité sur</p>
+                    
                         </div>
 
 
@@ -127,14 +128,14 @@
                             <div class="dropdown">
                                 <button class="btn dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Ville principale <span class="caret"></span></button>
                                 <ul class="dropdown-menu" aria-labelledby="dropdownMenu1" style="overflow-y:scroll;">
-                                    <li><input id="select" class="my-activitys" type="radio" name="villes" value="9">&nbsp; &nbsp;Casablanca</li>
-                                    <li><input id="select" class="my-activitys" type="radio" name="villes" value="10">&nbsp; &nbsp;Rabat</li>
-                                    <li><input id="select" class="my-activitys" type="radio" name="villes" value="14">&nbsp; &nbsp;Fes</li>
-                                    <li><input id="select" class="my-activitys" type="radio" name="villes" value="16">&nbsp; &nbsp;Tanger</li>
-                                    <li><input id="select" class="my-activitys" type="radio" name="villes" value="4">&nbsp; &nbsp;Agadir</li>
+                                    <li><label><input id="select" class="my-activitys" type="checkbox" name="villes" value="9">&nbsp; &nbsp;Casablanca</label></li>
+                                    <li><label><input id="select" class="my-activitys" type="checkbox" name="villes" value="10">&nbsp; &nbsp;Rabat</label></li>
+                                    <li><label><input id="select" class="my-activitys" type="checkbox" name="villes" value="14">&nbsp; &nbsp;Fes</label></li>
+                                    <li><label>&nbsp; &nbsp;Tanger</label></li>
+                                    <li><label><input id="select" class="my-activitys" type="checkbox" name="villes" value="4">&nbsp; &nbsp;Agadir</label></li>
                                     {% for ville in villes %}
                                         <div class="tex" >
-                                            <li><input id="select" class="my-activitys" type="radio" name="villes" value="{{ ville.region.coderegion }}"/>&nbsp; &nbsp;{{ ville.libelle }}</li>
+                                            <li><label><input id="select" class="my-activitys" type="checkbox" name="villes" value="{{ ville.region.coderegion }}"/>&nbsp; &nbsp;{{ ville.libelle }}</label></li>
                                         </div>
                                     {% endfor %}
                                 </ul>
@@ -147,11 +148,11 @@
                                 <ul class="dropdown-menu" aria-labelledby="dropdownMenu2" style="overflow-y:scroll;">
 
 
-                                    <li><input  type="radio" name="radio1" class="my-activity"  value="0"/>&nbsp; &nbsp;Sur sa localité</li>
-                                    <li><input  type="radio" name="radio1" class="my-activity"  value="1"/>&nbsp; &nbsp;+1 Localité</li>
-                                    <li><input  type="radio" name="radio1" class="my-activity"  value="3"/>&nbsp; &nbsp;+3 Localités</li>
-                                    <li><input  type="radio" name="radio1" class="my-activity"  value="6"/>&nbsp; &nbsp;+6 Localités</li>
-                                    <li><input  type="radio" name="radio1" class="my-activity"  value="9"/>&nbsp; &nbsp;+9 Localités</li>
+                                    <li><label><input  type="checkbox" name="radio1" class="my-activity"  value="0"/>&nbsp; &nbsp;Sur sa localité</label></li>
+                                    <li><label><input  type="checkbox" name="radio1" class="my-activity"  value="1"/>&nbsp; &nbsp;+1 Localité</label></li>
+                                    <li><label><input  type="checkbox" name="radio1" class="my-activity"  value="3"/>&nbsp; &nbsp;+3 Localités</label></li>
+                                    <li><label><input  type="checkbox" name="radio1" class="my-activity"  value="6"/>&nbsp; &nbsp;+6 Localités</label></li>
+                                    <li><label><input  type="checkbox" name="radio1" class="my-activity"  value="9"/>&nbsp; &nbsp;+9 Localités</label></li>
 
                                 </ul>
                             </div>
@@ -168,7 +169,7 @@
 
                                     {% for entities in entities  %}
                                         <div class="tex xxx" >
-                                            <li><input id="select" class="regiontest" type="radio" name="regions" value="{{ entities.coderegion }}"/>&nbsp; &nbsp;{{ entities.libelle }}</li>
+                                            <li><label><input id="select" class="regiontest" type="checkbox" name="regions" value="{{ entities.coderegion }}" disabled/>&nbsp; &nbsp;{{ entities.libelle }}</label></li>
                                         </div>
                                     {% endfor %}
                                 </ul>
@@ -179,11 +180,11 @@
                             <div class="dropdown">
                                 <button class="btn dropdown-toggle" type="button" id="dropdownMenu4" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Région suppl. <span class="caret"></span></button>
                                 <ul class="dropdown-menu" aria-labelledby="dropdownMenu4" style="overflow-y:scroll;">
-                                    <li><input  type="radio" name="radio" class="region"  value="0"/>&nbsp; &nbsp;Sur sa region</li>
-                                    <li><input  type="radio" name="radio" class="region"  value="1"/>&nbsp; &nbsp;+1 Région</li>
-                                    <li><input  type="radio" name="radio" class="region"  value="3"/>&nbsp; &nbsp;+3 Régions</li>
-                                    <li><input  type="radio" name="radio" class="region"  value="6"/>&nbsp; &nbsp;+6 Régions</li>
-                                    <li><input  type="radio" name="radio" class="region"  value="N"/>&nbsp; &nbsp;National</li>
+                                    <li><label><input  type="checkbox" name="radio" class="region"  value="0"/>&nbsp; &nbsp;Sur sa region</label></li>
+                                    <li><label><input  type="checkbox" name="radio" class="region"  value="1"/>&nbsp; &nbsp;+1 Région</label></li>
+                                    <li><label><input  type="checkbox" name="radio" class="region"  value="3"/>&nbsp; &nbsp;+3 Régions</label></li>
+                                    <li><label><input  type="checkbox" name="radio" class="region"  value="6"/>&nbsp; &nbsp;+6 Régions</label></li>
+                                    <li><label><input  type="checkbox" name="radio" class="region"  value="N"/>&nbsp; &nbsp;National</label></li>
 
 
 
@@ -223,15 +224,23 @@
 
                     <div class="form-group">
 
-                        <a href="#" id="khalila" {#onclick="this.parentElement.style.display='none';"#} class="btn black" role="button">
+
+                        <Button id="khalila"  {#onclick="this.parentElement.style.display='none';"#} class="btn black" >
                             <span style="color: #ffdb2e;">Budget estimé</span>
                             <br>Référencement
-                        </a>
+                        </Button>
+
 
 
 
                     </div>
-                    <input style="  "  id="fayssal" type="number"  value="">
+
+                    <div class="form-group">
+                        <div id="ref" style="display: none">
+                            <input style="  "  id="fayssal" type="number"  value="" readonly>
+                        </div>
+
+                    </div>
                     <div class="form-group pull-right">
 
                         <div class="form-group">
@@ -260,7 +269,26 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="http://code.jquery.com/jquery.js"></script>
+
 <script type="text/javascript">
+    $('.my-activitys').on('change', function() {
+        $('.my-activitys').not(this).prop('checked', false);
+    });
+    $('.my-activity').on('change', function() {
+        $('.my-activity').not(this).prop('checked', false);
+    });
+    $('.regiontest').on('change', function() {
+        $('.regiontest').not(this).prop('checked', false);
+    });
+    $('.region').on('change', function() {
+        $('.region').not(this).prop('checked', false);
+    });
+
+
+</script>
+<script type="text/javascript">
+
+
     $(document).ready(function() {
         function cal(){
             var total = +$("#rania").val() || 0;
@@ -272,8 +300,16 @@
              alert(vard);*/
             $("#fayssal").val(vat + total+vard+final);
         }
-        $(document).on('click', '#khalila', function () {
+        $(document).on('click', '#khalila', function (e) {
+            e.preventDefault();
             cal();
+            var div = document.getElementById("ref");
+            if (div.style.display == "none") {
+                div.style.display = "block";
+            }
+            else {
+                div.style.display = "none";
+            }
             document.getElementById('fayssal')/*.style.display = 'block'*/;
         });
         $(document).on('click', '.my-activitys', function () {
@@ -427,7 +463,7 @@
         });
         $("#num3").on("keydown keyup change", function() {
             var num3 = document.getElementById('num3').value;
-            var result3 = parseInt(num3) * 400;
+            var result3 = parseInt(num3) * 1500;
             document.getElementById("mari").value = result3;
         });
         $("#num1").on("keydown keyup change", function() {
@@ -468,12 +504,47 @@
         var selectfct = function () {
             if($(".my-activitys").is(":checked")){
                 $('#dropdownMenu2').prop('disabled', false);
+                $('#dropdownMenu3').prop('disabled', false);
+                $('#dropdownMenu4').prop('disabled', false);
+                $("#dropdownMenu1").attr({
+                    "aria-expanded" : "true"
+
+                });
             }else{
                 $('#dropdownMenu2').prop('disabled', 'disabled');
+                $('#dropdownMenu3').prop('disabled', 'disabled');
+                $('#dropdownMenu4').prop('disabled', 'disabled');
+                $("#dropdownMenu1").attr({
+                    "aria-expanded" : "false"
+
+                });
             }
+
+
+
         };
+
+
         $(selectfct);
         $(".my-activitys").click(selectfct);
+
+
+        var selectfcts = function () {
+            if($(".my-activity").is(":checked")){
+                $('.region').prop('checked', false);
+
+            }else{
+
+
+        }
+
+
+
+        };
+
+
+        $(selectfcts);
+        $(".my-activity").click(selectfcts);
     });
 </script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
